# ovn-ci

./: Cargo.toml  deploy.sh
.github/workflows/: runner.yml
config/: example.yaml  minimal.yaml
lib/: ci.rs  cli_report.rs  config.rs  container.rs  email.rs  git.rs  lib.rs  runner.rs  scheduler.rs  util.rs
lib/vm/: base.rs  mod.rs  runner.rs
src/: ci.rs  config.rs  git.rs  main.rs  runner.rs
static/: nginx.conf
static/selinux/: virtlogd.te
static/systemd/: ovn-ci.service  ovn-ci.timer
template/: report.html
vm/: fedora.ks.in  network.xml  vm.xml
