[package]
name = "ovn-ci"
version = "0.1.0"
authors = ["Ales Musil <amusil@redhat.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/lib.rs"

[dependencies]
serde_yaml = "0.9"
thiserror = "2.0"

anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
